Add API6+5 Support

--- a/build.gradle
+++ b/build.gradle
@@ -8,4 +8,6 @@ description = 'Server Utilities Plugins'
 
 dependencies {
     compile 'org.spongepowered:spongeapi:7.0.0-SNAPSHOT'
+    compile 'org.spongepowered:spongeapi:6.0.0'
+    compile 'org.spongepowered:spongeapi:5.1.0'
 }
