--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,6 @@ language: java
 jdk:
   - oraclejdk8
 
-before_cache:
-  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
-  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
-
-cache:
-  directories:
-    - $HOME/.gradle/caches/
-    - $HOME/.gradle/wrapper/
-
 branches:
   only:
     - master
@@ -31,5 +22,7 @@ before_deploy:
 deploy:
   provider: releases
   api_key: $token
-  file: build/libs/*
+  file: "./build/libs/*"
   skip_cleanup: true
+  on:
+    tags: true
